
include_directories("/home/syh/cereal/include")
add_executable(json_exp1 json_exp1.cpp)

add_executable(json_exp2 json_exp2.cpp)

add_executable(json_exp3 json_exp3.cpp)

add_executable(json_exp4 json_exp4.cpp)

add_executable(json_exp5 json_exp5.cpp)

add_executable(smart_ptr smart_ptr.cpp smart_ptr.h)

add_executable(unique_ptr unique_ptr.cpp)

add_executable(vec_unique_ptr vec_unique_ptr.cpp)

add_executable(std_copy std_copy.cpp)
